# redwood

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: readme-figure.yml
examples/datasets/: README.md  manifest.json
examples/datasets/beroe/: manifest.json
examples/datasets/drosophila/: annotation.gff  manifest.json  reads.mapped.bam  reads.mapped.bam.bai  reference.fa  rnaseq.mapped.bam  rnaseq.mapped.bam.bai  rnaseq_manifest.json
examples/datasets/human/: annotation.gff  manifest.json  reads.mapped.bam  reads.mapped.bam.bai  reference.fa  rnaseq.mapped.bam  rnaseq.mapped.bam.bai  rnaseq_manifest.json
examples/datasets/mouse/: annotation.gff  manifest.json  reads.mapped.bam  reads.mapped.bam.bai  reference.fa  rnaseq.mapped.bam  rnaseq.mapped.bam.bai  rnaseq_manifest.json
examples/datasets/sponge/: annotation.gff  manifest.json  reads.mapped.bam  reads.mapped.bam.bai  reference.fa  rnaseq.mapped.bam  rnaseq.mapped.bam.bai  rnaseq_manifest.json
redwood/: __init__.py  bamparse.py  cli.py  functions.py  plot.py  renderer.py  workflow.py
scripts/: build_readme_figure.py  build_real_read_datasets.py  build_rnaseq_tracks.py
tests/: test_cli.py  test_renderer.py  test_workflow.py
